[package]
name = "lprs"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Awiteb <awiteb@hotmail.com>"]
readme = "README.md"
description = "A local CLI password manager"
repository = "https://github.com/TheAwiteb/lprs"
rust-version = "1.70.0"
keywords = ["password", "manager", "CLI"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
directories = "5.0.1"
log = "0.4.20"
passwords = { version = "3.1.16", features = ["common-password"] }
pretty_env_logger = "0.5.0"
regex = "1.10.2"
scanpw = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with_macros = "3.4.0"
sha256 = { version = "1.4.0", default-features = false }
soft-aes = "0.1.0"
thiserror = "1.0.51"
url = { version = "2.5.0", features = ["serde"] }
reqwest = {version = "0.11.23", optional = true}

[features]
default = ["update-notify"]
update-notify = ["reqwest/blocking"]

[profile.release]
strip = true # Automatically strip symbols from the binary.
