[package]
name = "lprs"
version = "1.2.1"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Awiteb <a@4rs.nl>"]
readme = "README.md"
description = "A local CLI password manager"
repository = "https://git.4rs.nl/awiteb/lprs"
rust-version = "1.70.0"
keywords = ["password", "manager", "CLI"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
log = "0.4.21"
passwords = { version = "3.1.16", features = ["common-password"] }
pretty_env_logger = "0.5.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0.59"
reqwest = {version = "0.11.27", optional = true}
inquire = "0.7.5"
bincode = "1.3.3"
rand = "0.8.5"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
aes = "0.8.4"
sha2 = "0.10.8"
serde_json = "1.0.116"
base64 = "0.22.1"

[features]
default = ["update-notify"]
update-notify = ["reqwest/blocking"]

[profile.release]
strip = true # Automatically strip symbols from the binary.
